# kmerdb

./: .build.sh  .clean_local_install.sh  .deploy.md  .gitignore  .python-version  .readthedocs.yaml  .release.sh  .ruby-gemset  .travis.yml  .upgrade_python_version.sh  CITATION  CITATION_FAQ.md  Gemfile  LICENSE.txt  MANIFEST.in  MIT_LICENSE.txt  Pipfile  README.md  RELEASE_NOTES.txt  TODO.org  _config.yml  academics.md  academics.org  analyze.md  appmap.py  bibliography.bib  build.sh  codecove.yml  config.py  developing.md  fork-me-baby.min.js  index.html  index.md  installation.md  kdb_webite.gemspec  kmer_utils.py  kmerdb_website.gemspec  old_TODO.org  pyproject.toml  quickstart.md  (+5 more)
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
_includes/: footer.html
_layouts/: default.html  home.html
_posts/: 2019-02-11-what-is-kdb.md  2020-10-27-acknowledgements.md  2020-10-28-license.md  2020-10-29-development.md  2020-10-30-documentation.md  2020-10-31-objectives.md  2020-11-02-writing-kdb.md  2020-11-03-reading-kdb.md  2020-11-04-api.md  2020-12-02-rarefaction.md  2020-12-03-cluster.md  2020-12-04-matrix-generation.md  2020-12-05-distance-matrix.md  2020-12-06-view.md  2020-12-07-usage.md  2021-01-01-installation.md  2021-01-02-kdb-format.md  2021-01-02-what-is-kdb.md
docs/: api.rst  conf.py  conf.py.old  index.Rmd  index.rst  index.rst.old  kdb.rst  kmerdb.rst  modules.rst
docs/source/: conf.py  index.rst  kmerdb.rst
examples/example_report/: README.md  bibliography.bib  bioRxiv-template.Rmd  index.Rmd  index.org  kdb_spearman_upgma_tree.phyloxml  normalized_count_matrix.tsv  normalized_spearman_dist.tsv  peerj.latex  peerj.tex  unnormalized_count_matrix.tsv  wlpeerj.cls
examples/example_report1/: Cac_subsample_correlations.txt  NOTES.Rmd  README.md
examples/example_report2/: index.Rmd  metagenome_1.8.kdbi  microbes.txt
examples/example_report3/: bibliography.bib
examples/plos_quarto-journals_template_1/: bibliography.bib  plos_quarto-journals_template.qmd  plos_quarto-journals_template.tex
kdb/: __init__.py  __main__.py  config.py  database.py  distance.py  fileutil.py  index.py  kmer.py  kmer_utils.py  parse.py  profile.py  seqparser.py  util.py
kmerdb/: CITATION  CITATION.txt  __init__.py  __main__.py  alignment.pyx  appmap.py  codons.py  config.py  cublas_gemm.pyx  database.py  distance.py  distance.pyx  fileutil.py  graph.py  graphlib.py  index.py  kmer.py  lexer.py  logger.py  minimizer.py  parse.py  probability.py  python_distances.py  regression.py  regression.pyx  seqparser.py  strassen_cython.py  strassen_cython.pyx  util.py
report/: bibliography.bib
test/: test_database.py  test_fileutil.py  test_graph.py  test_kmer.py  test_parsefile.py
test/data/: example_v0.6.3_kdb_file.8.kdb  sample.fa  test_Cac_ATCC824.8.kdb  test_Cac_ATCC824.8.kdbg
