#   Copyright 2020 Matthew Ralston
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.



[build-system]
requires = ["setuptools", "wheel", "numpy>=1.19.0", "Cython>=0.29.21"]
#build-backend = "setuptools.build_meta"

[project]
name = "kmerdb"
version = "0.7.1"
description = "Yet another kmer library for Python"
readme = "README.md"
authors = [{name="Matt Ralston <mralston.development@gmail.com>", email="mralston.development@gmail.com"}]
license = { file = "LICENSE.txt" }
classifiers = [
	    "Development Status :: 1 - Planning",
	    "Intended Audience :: Developers",
	    "Intended Audience :: Science/Research",
	    "License :: OSI Approved :: Apache Software License",
	    "Operating System :: OS Independent",
	    "Programming Language :: Python",
	    "Programming Language :: Python :: 3",
	    "Programming Language :: Python :: 3.6",
	    "Programming Language :: Python :: 3.7",
	    "Programming Language :: Python :: 3.8",
	    "Programming Language :: Python :: 3.9",
	    "Programming Language :: Python :: 3.10",
	    "Topic :: Scientific/Engineering",
	    "Topic :: Scientific/Engineering :: Bio-Informatics",
	    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["bioinformatics", "fastq", "fasta", "k-mer", "kmer", "k-merdb", "kmerdb", "kdb"]
dependencies = [
	     #########################################
	     # AWS	     
	     #########################################
	     'boto3==1.20.25',
	     'botocore==1.23.25',
	     's3transfer==0.5.0',
	     #########################################
	     # BioPython
	     #########################################
	     'biopython==1.79',

	     #########################################
	     # Cython
	     #########################################
	     'cython==0.29.26',

	     #########################################
	     # Distlib
	     #########################################
	     'distlib==0.3.4',

	     #########################################
	     # Documentation
	     #########################################
	     'docutils==0.17',
	     #'docutils==0.18.1',
	     'sphinx==4.3.2',
	     'sphinxcontrib-htmlhelp==2.0.0',
	     'sphinxcontrib-serializinghtml==1.1.5',
	     'sphinx-rtd-theme==1.0.0',

	     #########################################
	     # Graphics
	     #########################################
	     'matplotlib==3.5.1',


	     #########################################
	     # Scientific computing
	     #########################################
	     'cupy==11.0.0',
	     #'numba==0.52.0',
	     'numpy==1.21.6',
	     'pandas==1.3.5',
	     'scipy==1.7.3',
	     'sklearn==0.0',

	     #######################
	     # Statistical language
	     #######################
	     'rpy2==3.4.2',

	     ####################
	     # Graph schema
	     ####################
	     #'rdflib==5.0.0',
	     #'rdflib-jsonld==0.5.0',

	     #########################################
	     # Configurations
	     #########################################
	     'PyYAML==6.0',
	     'jsonschema==4.3.2',

	     #########################################
	     # Micellaneous
	     #########################################
	     'psutil==5.8.0',
	     #'more-itertools==8.2.0'

	     #########################################
	     # urllib3
	     #########################################
	     # Note: this program does not connect to the network AT ALL
	     # but s3: downloads were supported for the 'kmerdb profile' subcommand
	     #urllib3==1.26.7
]
requires-python = ">=3.6.0"

[project.optional-dependencies]
dev = [
    'auditwheel==5.1.2',
    'build>=0.9.0',
    'coverage==4.5.4',
    'expects==0.9.0',
    'ghstats==1.2.0',
    'ipykernel==5.1.4',
    'ipython==7.16.3',
    'ipython-genutils==0.2.0',
    'ipywidgets==7.5.1',
    'jedi==0.16.0',
    'jupyter==1.0.0',
    'jupyter-client==6.0.0',
    'jupyter-console==6.1.0',
    'jupyter-core==4.6.3',
    'mamba==0.10',
    'memory-profiler==0.57.0',
    'pytest==5.3.5',
    'twine==4.0.1'
]

[tool.setuptools.packages.find]
where = ["kmerdb"]
namespaces = true

[tool.setuptools.package-data]
citation = ["CITATION"]



[project.urls]
Homepage = "https://github.com/MatthewRalston/"

[project.scripts]
kmerdb = "kmerdb:cli"